# atomic

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  web.dockerfile
.github/workflows/: docker.yml  release.yml  test.yml
crates/atomic-core/: Cargo.toml
crates/atomic-core/src/: agent.rs  canvas_level.rs  chunking.rs  clustering.rs  compaction.rs  db.rs  embedding.rs  extraction.rs  lib.rs  models.rs  registry.rs  search.rs  settings.rs
crates/atomic-core/tests/: pipeline_tests.rs  storage_tests.rs
crates/atomic-mcp/src/: server.rs
crates/atomic-server/: Cargo.toml
crates/atomic-server/src/: lib.rs  main.rs  state.rs
crates/mcp-bridge/: Cargo.toml
crates/mcp-bridge/src/: main.rs
discord/src/: index.ts
docs/: AGENTS.md  plan-storage-abstraction.md
ios/AtomicMobile/: TagBrowserView.swift
plugins/obsidian-plugin/: manifest.json  package-lock.json  package.json
scripts/: test-editor-harness.mjs
scripts/harness/: check-click-no-flash.mjs  check-drag-select.mjs  check-fresh-typing.mjs  check-image-stays.mjs
src/: App.tsx  index.css  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  embedding.rs  extraction.rs  http_server.rs  lib.rs  main.rs  models.rs  wiki.rs
src/hooks/: index.ts  useEmbeddingEvents.ts  useInlineEditor.ts
src/lib/: EDITOR.md  api.ts  codemirror-rich-markdown.ts  markdown.ts  platform.ts  tauri.ts
src/stores/: atoms.ts  briefing.ts  chat.ts  databases.ts  ui.ts  wiki.ts
src/styles/: codemirror-inline-preview.css
(+91 files in other folders)
